--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,51 +1,46 @@
- <!doctype html>
+<!doctype html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes" />
-
-
-<script src="js/iscroll-lite.js"></script>
-<script src="js/app.js"></script>
-<script src="js/index.js"></script>
-
-<link rel="stylesheet" href="css/index.css">
-<link rel="stylesheet" href="css/jquery.mobile.css">
-
-  <title>PhoneGapDoosra</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <script src="js/iscroll-lite.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/jquery.mobile.css">
+    <title>PhoneGapDoosra</title>
 </head>
-
-
-
-
 <body>
 <header>
-
-
-<INPUT Type="image" VALUE="goBack" onClick="history.go(-1);return true;" src="images/back.jpeg" alt="" width="45" height="45" align="left">
-<span class='h1'>Doosra</span>
-<INPUT Type="image" VALUE="" onClick="index.html;return true;" src="images/home1.jpeg" alt="" width="45" height="45" align="right">
-
+    <INPUT Type="image" VALUE="goBack" onClick="history.go(-1);return true;" src="images/back.jpeg" alt="" width="45" height="45" align="left">
+    <span class='h1'>Doosra</span>
+    <INPUT Type="image" VALUE="" onClick="index.html;return true;" src="images/home1.jpeg" alt="" width="45" height="45" align="right">
 </header>
-
 <div id="wrapper">
     <div id="main-content">
-<table align="center">
-<tr>
-<th><form action="About.html" method="get"><INPUT Type="submit" id="button1" VALUE="ABOUT" onToggle="About.html"/></form></th>
-<th><form action="Team.html" method="get"><INPUT Type="submit" id="button1" VALUE="TEAM" onToggle="Team.html" /></form></th>
-</tr>
-<tr>
-<th><form action="Technology.html" method="get"><INPUT Type="submit" id="button1" VALUE="TECHNOLOGY" onToggle="Technology.html"></form></th>
-<th><form action="UrlUsed.html" method="get"><INPUT Type="submit" id="button1" VALUE="WIKI LINKS" onToggle="UrlUsed.html"></form></th>
-</tr>
-<!--<tr>
-<th><form action="Misc.html" method="get"><INPUT Type="submit" id="button1" VALUE="MISCELLANEOUS" onClick="Misc.html"></form></th>
-</th>
-</tr>-->
-</table>
+        <table align="center">
+            <tr>
+                <th>
+                    <form action="About.html" method="get"><INPUT Type="submit" id="button1" VALUE="ABOUT" onToggle="About.html"/></form>
+                </th>
+                <th>
+                    <form action="Team.html" method="get"><INPUT Type="submit" id="button1" VALUE="TEAM" onToggle="Team.html" /></form>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <form action="Technology.html" method="get"><INPUT Type="submit" id="button1" VALUE="TECHNOLOGY" onToggle="Technology.html"></form>
+                </th>
+                <th>
+                    <form action="UrlUsed.html" method="get"><INPUT Type="submit" id="button1" VALUE="WIKI LINKS" onToggle="UrlUsed.html"></form>
+                </th>
+            </tr>
+            <!--<tr>
+               <th><form action="Misc.html" method="get"><INPUT Type="submit" id="button1" VALUE="MISCELLANEOUS" onClick="Misc.html"></form></th>
+               </th>
+               </tr>-->
+        </table>
+    </div>
 </div>
- </div>
-
 </body>
 </html>
