--- a/assets/www/UrlUsed.html
+++ b/assets/www/UrlUsed.html
@@ -1,16 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <title></title>
+
+
+
+
+
+    <script type="text/javascript" src = "js/jquery-1.9.min.js"></script>
+    <link rel="stylesheet" href="https://d10ajoocuyu32n.cloudfront.net/mobile/1.3.1/jquery.mobile-1.3.1.min.css">
+    <script src="https://d10ajoocuyu32n.cloudfront.net/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/iscroll-lite.js"></script>
-    <script src="js/index.js"></script>
     <script src="js/app.js"></script>
-    <title>PhoneGapDoosra</title>
+
+
+
+    <!-- jQuery and jQuery Mobile -->
+    <!--script src="https://d10ajoocuyu32n.cloudfront.net/jquery-1.9.1.min.js"></script-->
+
+    <!-- Extra Codiqa features -->
+    <script src="https://d10ajoocuyu32n.cloudfront.net/codiqa.ext.js"></script>
+    <script type="text/javascript">
+
+        $(document).ready(function()
+        {
+        // listens for any navigation keypress activity
+        $('#page1 a').bind('click',function(e)
+        {
+        var id = $(this).attr('id');
+        switch(id)
+        {
+           case 'about':
+        document.location='About.html'
+        break;
+        case 'team':
+        document.location='Team.html'
+        break;
+        case 'technology':
+        document.location='Technology.html'
+        break;
+        case 'url':
+        document.location='UrlUsed.html'
+        break;
+        }
+        });
+        });
+    </script>
+
 </head>
-<body onload="myFunction()">
+<body>
 <header>
     <h1>Doosra
         <INPUT Type="image" VALUE="goBack" onClick="history.go(-1);return true;" src="images/back.jpeg" alt="" width="45" height="45" align="left">
@@ -19,39 +65,43 @@
         </a>
     </h1>
 </header>
-<div id="wrapper">
-    <div id="main-content">
-        <h1>This is UrlUsed page</h1>
+
+
+<!-- Home -->
+<div data-role="page" id="page1">
+    <div data-theme="b" data-role="header" data-position="fixed">
+        <h3>
+            Doosra
+        </h3>
+        <div data-role="navbar" data-iconpos="bottom">
+            <ul>
+                <li>
+                    <a id="about" data-transition="flip" data-theme="d" data-icon="">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a id="team" data-transition="fade" data-theme="d" data-icon="">
+                        Team
+                    </a>
+                </li>
+                <li>
+                    <a id="technology" data-transition="flip" data-theme="d" data-icon="">
+                        Technology
+                    </a>
+                </li>
+                <li>
+                    <a id="url" data-transition="flip" data-theme="d" data-icon=""   class="ui-btn-active ui-state-persist">
+                        URL
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <footer>
-        <ul id="tab-bar">
-            <li>
-                <a href="About.html"><img border="0" src="images/about.jpeg" alt="" width="99" height="48">
-                </a>
-            </li>
-            <li>
-                <a href="Team.html"><img border="0" src="images/team1.jpeg" alt="" width="99" height="48">
-                </a>
-            </li>
-            <li>
-                <a href="Technology.html"><img border="0" src="images/technology.jpeg" alt="" width="99" height="48">
-                </a>
-            </li>
-            <li>
-                <a href="UrlUsed.html"><img border="0" src="images/url.jpeg" alt="" width="99" height="48"></a>
-            </li>
-        </ul>
-    </footer>
-</div>
-<div id="pages">
-    <div id="About" >
-    </div>
-    <div id="Team">
-    </div>
-    <div id="Technology">
-    </div>
-    <div id="urlUsed"  class="current">
+    <div data-role="content">
     </div>
 </div>
 </body>
 </html>
+
+
